crates/vise/tests/ui/labels/rename_and_format_clash.rs
use vise::EncodeLabelValue;

#[derive(Debug, EncodeLabelValue)]
#[metrics(rename_all = "snake_case", format = "{:?}")]
enum Label {
    Test,
    Value,
}

fn main() {}
